--- a/css/contato.css
+++ b/css/contato.css
@@ -30,12 +30,12 @@ header{
 }
 
 .info i{
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     margin-right: 1rem;
 }
 
 .info a{
-    font-size: 1rem;
+    font-size: .9rem;
 }
 
 .input_info_contato{
